# aapl-sma-backtest

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  research.py
configs/: research_v4.yaml  research_v5.yaml  research_v6.yaml
docs/: research_summary.md
outputs/: aapl_model_forecast_report.xlsx  allocation_leaderboard.csv  base_backtest.csv  benchmark_comparison.csv  capture_analysis.csv  capture_leaderboard.csv  cost_sensitivity.csv  data_snapshot.csv  equity_curve.csv  excel_model_data.csv  final_model_walk_forward.csv  hysteresis_sweep.csv  metrics.csv  model_leaderboard.csv  multi_asset_results.csv  parameter_sweep.csv  regime_results.csv  research_report.xlsx  risk_filter_sweep.csv  run_manifest.json  significance_results.csv  trade_log.csv  train_test_results.csv  turnover_analysis.csv  v03_comparison.csv  v03_cost_sensitivity.csv  v03_selected_curve.csv  v04_comparison.csv  v04_cost_sensitivity.csv  v04_selected_curve.csv  walk_forward_results.csv
src/quant_backtest/: __init__.py  backtest.py  data.py  engine.py  ensemble_research.py  evaluation.py  experiments.py  metrics.py  overlay_research.py  overlays.py  parallel.py  registry.py  reports.py  research_config.py  research_data.py  selection.py  signal_families.py  significance.py  stats.py  strategies.py  sweeps.py
tests/: test_m1_foundation.py  test_m2_signal_families.py  test_m3_overlays.py  test_methodology_v05.py  test_stats.py  test_strategies_experiments.py
